--- a/config/dev.cfg
+++ b/config/dev.cfg
@@ -6,5 +6,5 @@ MAIL_USE_SSL = False
 MAIL_USERNAME = "your_api_name"
 MAIL_PASSWORD = "your_password"
 SECRET_KEY = "secret_key"
-DATABASE_URL = "postgresql://:!@localhost/"
+DATABASE_URL = "postgresql://:@localhost/"
 DEFAULT_PHOTO_URL = "https://img.freepik.com/premium-vector/user-profile-icon-flat-style-member-avatar-vector-illustration-isolated-background-human-permission-sign-business-concept_157943-15752.jpg"
